<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            app:shapeAppearanceOverlay="@style/roundImageView"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/iv_image"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/iv_image"
            android:textColor="@color/text"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/tv_releaseDate"
            style="@style/body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/iv_image"
            android:layout_alignParentBottom="true"
            tools:text="@string/releaseDate" />

        <ImageView
            android:id="@+id/iv_rating"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/tv_rating"
            android:src="@drawable/baseline_star_24" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            tools:text="@string/rating" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>